# pipeline-v4

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CPM.cmake  README.md
.github/workflows/: cmake-single-platform.yml  releases-workflow.yml
app/: mainthread.cpp
app/features/: cfg.cpp  cfg.hpp  config.cpp  config.hpp
app/features/config_system/: config_system.cpp  config_system.hpp
app/features/engine_prediction/: engine_prediction.cpp  engine_prediction.hpp
app/features/esp/: esp.cpp  esp.hpp
app/features/menu/: menu.cpp  menu.hpp  widgets.cpp  widgets.hpp
app/hooks/: hooks.cpp  hooks.hpp
inc/: ImGuiNotify.hpp  checksumcrc.cpp  checksumcrc.hpp  color.hpp  crashlog.hpp  fnv1a.hpp  imconfig.hpp  link.cpp  link.hpp  math.hpp  matrix.hpp  md5.hpp  netvar_manager.cpp  netvar_manager.hpp  netvar_registry.hpp  qangle.hpp  typdefs.hpp  utils.hpp  vector.hpp
inc/draw_manager/: draw_manager.cpp  draw_manager.hpp  icons.hpp  verdana.hpp
inc/sdk/valve/: base_client_dll.hpp  base_combat_weapon.cpp  base_combat_weapon.hpp  base_entity.cpp  base_entity.hpp  base_player.cpp  base_player.hpp  bitbuf.cpp  bitbuf.hpp  c_handle.hpp  client_class.hpp  client_entity.hpp  client_mode.hpp  client_networkable.hpp  client_renderable.hpp  client_state.hpp  client_thinkable.hpp  client_unknown.hpp  cvar.hpp  debug.hpp  defs.hpp  engine_client.hpp  engine_trace.hpp  engine_vgui.hpp  entity_list.hpp  game_events.hpp  game_movement.hpp  globalvars.hpp  input.hpp  kv.cpp  kv.hpp  material.hpp  material_system.hpp  material_var.hpp  model_info.hpp  netchan.hpp  pred.hpp  ref_counted.hpp  render_view.hpp  surface.hpp  (+2 more)
